--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Harvest | Home</title>
+  <title>Faq Collapse</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,22 +14,79 @@
 <body>
   <!--container start-->
   <div class="container">
-    <!--header section start-->
-    <header>
 
-    </header>
-    <!--header section start-->
     <!--main section start-->
     <main>
-
+      <section class="faq-section">
+        <div class="wrapper">
+          <h1>Frequently Asked Questions</h1>
+          <ul class="faq-container">
+            <li class="faq active">
+              <h2 class="faq-title">
+                Why shouldn't we trust atoms?
+              </h2>
+              <p class="faq-text">
+                They make up everything
+              </p>
+              <div class="faq-btn">
+                <span class="open-btn">open</span>
+                <span class="close-btn">close</span>
+              </div>
+            </li>
+            <li class="faq">
+              <h2 class="faq-title">
+                What do you call someone with no body and no nose?
+              </h2>
+              <p class="faq-text">
+                Nobody knows.
+              </p>
+              <div class="faq-btn">
+                <span class="open-btn">open</span>
+                <span class="close-btn">close</span>
+              </div>
+            </li>
+            <li class="faq">
+              <h2 class="faq-title">
+                What's the object-oriented way to become wealthy?
+              </h2>
+              <p class="faq-text">
+                Inheritance.
+              </p>
+              <div class="faq-btn">
+                <span class="open-btn">open</span>
+                <span class="close-btn">close</span>
+              </div>
+            </li>
+            <li class="faq">
+              <h2 class="faq-title">
+                How many tickles does it take to tickle an octopus?
+              </h2>
+              <p class="faq-text">
+                Ten-tickles!
+              </p>
+              <div class="faq-btn">
+                <span class="open-btn">open</span>
+                <span class="close-btn">close</span>
+              </div>
+            </li>
+            <li class="faq">
+              <h2 class="faq-title">
+                What is: 1 + 1?
+              </h2>
+              <p class="faq-text">
+                Depends on who are you asking.
+              </p>
+              <div class="faq-btn">
+                <span class="open-btn">open</span>
+                <span class="close-btn">close</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
-    <!--footer section start-->
-    <footer>
-
-    </footer>
-    <!--footer section end-->
   </div>
   <!--container end-->
 
